Fixed horizontal scrolling and edges.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,16 @@
 }
 
 body, html {
+    overflow-x: hidden;
     max-width: 100%;
     height: 100%;
-    margin:0px;
-    padding: 0px;
-    overflow: hidden;
+    margin: 0px;
     font-family: "Bahnschrift", Helvetica, sans-serif;
     letter-spacing: 1.5px;
+}
+
+body {
+    position: relative;
 }
 
 img {
@@ -42,7 +45,6 @@ h2 {
     background-color: white;
     position: fixed;
     top: 0;
-    left: 0;
     width: 100%;
 }
 
@@ -79,6 +81,7 @@ h2 {
 
 .row1 {
     height: 100%;
+    width: 100%;
     left: 0;
 }
 
@@ -103,7 +106,7 @@ h2 {
 
 .col-3 {
     height: 100%;
-    width: 33.33%;
+    width: 33.34%;
     background-image: url("buttons/AboutLink.png");
     background-position: 90%;
     background-repeat: no-repeat;
